--- a/SharpTut.html
+++ b/SharpTut.html
@@ -30,6 +30,10 @@
                 <li class="list-group-item">Item 3</li>
                 <li class="list-group-item">Item 4</li>
             </ul>
+            <div id="output"></div>
+            <br>
+            <button class="btn btn-dark btn-block" id="button"> Click Here</button>
+            <span></span>
         </div>
     </div>
 
